ErrorSheet
//Compile run 5/3/2020 @ 11:58 PM

testtt.c: In function ‘checkForWinDDownRight’:
testtt.c:268:10: error: ‘true’ undeclared (first use in this function)
   return true;
          ^~~~
testtt.c:268:10: note: each undeclared identifier is reported only once for each function it appears in
testtt.c:270:10: error: ‘false’ undeclared (first use in this function); did you mean ‘fclose’?
   return false;
          ^~~~~
          fclose
testtt.c: In function ‘displayWins’:
testtt.c:449:1: error: version control conflict marker in file
 <<<<<<< HEAD
 ^~~~~~~
testtt.c:453:1: error: version control conflict marker in file
 =======
 ^~~~~~~
testtt.c:455:5: error: redeclaration of ‘score’ with no linkage
 int score[];
     ^~~~~
testtt.c:451:5: note: previous declaration of ‘score’ was here
 int score[11];
     ^~~~~
testtt.c:455:5: error: array size missing in ‘score’
 int score[];
     ^~~~~
testtt.c:457:1: error: version control conflict marker in file
 >>>>>>> c70929ef7c9e9cabbf131af8086bea75422bdd1e
 ^~~~~~~
testtt.c: In function ‘turnTracker’:
testtt.c:470:6: error: ‘turnNum’ undeclared (first use in this function); did you mean ‘turn’?
  if (turnNum % 2 == 0){
      ^~~~~~~
      turn
testtt.c: In function ‘recordWin’:
testtt.c:487:21: error: expected expression before ‘;’ token
  for(int n = 0; n < ; n++){
                     ^
testtt.c:488:40: error: subscripted value is neither array nor pointer nor vector
   fprintf(wins, "%c %d", winnerName[11][maxName], score[11][2]);//array is: [max rows(no more than 10][max characters or integers in that row]
                                        ^
testtt.c: In function ‘getUserInput’:
testtt.c:513:1: error: version control conflict marker in file
 <<<<<<< HEAD
 ^~~~~~~
testtt.c:515:19: error: expected expression before ‘]’ token
  updateArray(game[][], position, turnCounter);
                   ^
testtt.c:515:24: error: ‘position’ undeclared (first use in this function)
  updateArray(game[][], position, turnCounter);
                        ^~~~~~~~
testtt.c: In function ‘updateArray’:
testtt.c:524:4: warning: implicit declaration of function ‘verticalPostion’; did you mean ‘verticalPositions’? [-Wimplicit-function-declaration]
  y=verticalPostion(game, x);
    ^~~~~~~~~~~~~~~
    verticalPositions
testtt.c:527:10: warning: ‘return’ with a value, in function returning void
   return 0;
          ^
testtt.c:519:6: note: declared here
 void updateArray (char game[][size+1], int x, int turnCounter)

